--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .DS_Store
+
+# Video files - keep only first 10 segments as samples
+socket-backend/video/video[1-9][0-9].ts
+socket-backend/video/video[1-9][0-9][0-9].ts
+socket-backend/video/video_passroot[1-9][0-9].ts
+socket-backend/video/video_passroot[1-9][0-9][0-9].ts
+socket-backend/video/video_voronoi[1-9][0-9].ts
+socket-backend/video/video_voronoi[1-9][0-9][0-9].ts
